--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -5,5 +5,15 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     display: flex;
     justify-content: space-between;
-    width: 100vw;
+    width: 100%;
+}
+
+.Links{
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+}
+
+.Links p{
+    margin: 15px;
 }
