--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,8 +1,11 @@
 .Home{
     color: black;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
