--- a/src/Components/portfolio/portfolio.css
+++ b/src/Components/portfolio/portfolio.css
@@ -1,6 +1,14 @@
-.Gallery{
+.Porty{
     color: black;
-    padding: 0;
+    margin: 15px;
+    padding: 15px;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+}
+
+.Gallery{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
 }
