--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -5,12 +5,18 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     display: flex;
     height: 100%;
+    
     justify-content: space-between;
     width: 100vw;
 }
 
 .About{
     margin-left: 35px;
+}
+
+.Portfolio{
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .Contact{
