--- a/src/Components/card/card.css
+++ b/src/Components/card/card.css
@@ -25,7 +25,7 @@ button{
     border: 2px solid #F4C285;
     border-radius: 5px;
     box-shadow: 2px 2px 2px lightgrey;
-    color: white;
+    color: black;
     cursor: pointer;
     font-family: 'Vesper Libre', serif;
     font-size: 15px;
@@ -36,5 +36,5 @@ button{
 button:hover{
     background-color: #FEFEFE;
     border: 2px solid #F4C285;
-    color:#F4C285;
+    color: black;
 }
