added logo to navbar + resized it, not totally happy with it

--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .Nav{
+    align-items: center;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
     border: solid 2px transparent;
@@ -6,6 +7,10 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+
+.Logo img{
+    height: 10vh;
 }
 
 .Links{
