changed the color of the botton on the home page to gold

--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -10,15 +10,15 @@
 }
 
 .big-button{
-    background-color: #fcc6be;
-    border: 2px solid #fcc6be;
+    background-color: #F4C285;;
+    border: 2px solid #F4C285;;
     color: black;
     height: 70px;
 }
 
 .big-button:hover{
     background-color: #FEFEFE;
-    border: 2px solid #fcc6be;
+    border: 2px solid #F4C285;;
     color: black;
 }
 
