--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -1,12 +1,13 @@
-.Contact-Info{
+.about-page{
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 55vh;
-    margin-top: 60px;
+    margin: 20px;
+    padding: 20px;
+    height: 60vh;
 }
 
-.contact-block{
+.about-block{
     align-items: center;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
@@ -15,10 +16,6 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     display: flex;
     flex-direction: column;
-    padding: 30px;
-}
-
-.Contact-Info a{
-    color: black;
-    text-decoration: none;
+    padding: 20px;
+    width: 60vw;
 }
