--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -6,7 +6,19 @@
     margin-top: 100px;
     padding: 0;
     width: 100%;
-    height: 50vh;
+    height: 48vh;
+}
+
+.block{
+    align-items: center;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    border: solid 2px transparent;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
 }
 
 .big-button{
