--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -16,18 +16,18 @@
 }
 
 .Links{
-    color: #4e706f;
+    color: #2f4343;
     display: flex;
     flex-direction: row;
     margin-right: 5px;
 }
 
 .Links p{
-    color: #4e706f;
+    color: #2f4343;
     margin: 15px;
 }
 
 .Links a{
-    color: #4e706f;
+    color: #2f4343;
     text-decoration: none;
 }
