--- a/src/Components/card/card.css
+++ b/src/Components/card/card.css
@@ -7,17 +7,23 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     display: flex;
     flex-direction: column;
-    height: 350px;
-    margin: 5px;
-    padding: 5px;
+    height: 250px;
+    /* margin: 5px; 
+    padding: 5px; */
     text-align: center;
-    width: 250px;
+    width: 150px;
+}
+
+.Card h3{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 0;
 }
 
 .ProjectImage{
     border-radius: 15px;
     margin-top: 20px;
-    width: 150px;
+    width: 80px;
 }
 
 button{
