--- a/src/Components/mandarin/mandarin.css
+++ b/src/Components/mandarin/mandarin.css
@@ -1,4 +1,5 @@
 .Mandarin h1{
+    color: #101616;
     display: flex;
     justify-content: center;
 }
@@ -10,6 +11,18 @@
     justify-content: space-between;
     margin: 20px;
     padding: 20px;
+}
+
+.content h3{
+    color: #2f4343;
+}
+
+.content h4{
+    color: #2f4343;
+}
+
+.content p{
+    color: #2f4343;
 }
 
 .m-block-1{
@@ -43,5 +56,37 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     margin: 15px;
     padding: 15px;
-    width: 55vw;
+    width: 30rem;
+}
+
+.m-img-3{
+    border-radius: 10px;
+    width: 30rem;
+}
+
+
+.m-block-3{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    border: solid 2px transparent;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
+    margin: 15px;
+    padding: 15px;
+    width: 28rem;
+}
+
+.m-block-4{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    border: solid 2px transparent;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
+    margin: 15px;
+    padding: 15px;
+    width: 20rem;
+}
+
+.m-block-4 a {
+    text-decoration: none;
 }
