--- a/src/Components/card/card.css
+++ b/src/Components/card/card.css
@@ -20,6 +20,11 @@
     padding: 0;
 }
 
+.Card a{
+    color: #2f4343;
+    text-decoration: none;
+}
+
 .ProjectImage{
     border-radius: 15px;
     margin-top: 20px;
