--- a/src/Components/mandarin/mandarin.css
+++ b/src/Components/mandarin/mandarin.css
@@ -4,12 +4,27 @@
     justify-content: center;
 }
 
+.highlights{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center; 
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    border: solid 2px transparent;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
+    margin: 20px;
+    padding: 15px;
+    width: 80vw;
+}
+
 .content{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 20px;
+    margin-top: 20px;
     padding: 20px;
 }
 
@@ -25,26 +40,30 @@
     color: #2f4343;
 }
 
+.content li{
+    color: #2f4343;
+}
+
 .m-block-1{
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
     border: solid 2px transparent;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-    margin: 15px;
+    margin: 20px;
     padding: 15px;
     width: 33.3vw;
 }
 
 .m-img-1{
     border-radius: 15px;
-    margin: 10px;
+    margin: 20px;
     width: 33.3vw;
 }
 
 .m-img-2{
     border-radius: 15px;
-    margin: 10px;
+    margin: 20px;
     width: 400px;
 }
 
@@ -54,13 +73,14 @@
     border: solid 2px transparent;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-    margin: 15px;
+    margin: 20px;
     padding: 15px;
     width: 30rem;
 }
 
 .m-img-3{
     border-radius: 10px;
+    margin: 20px;
     width: 30rem;
 }
 
@@ -71,7 +91,7 @@
     border: solid 2px transparent;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-    margin: 15px;
+    margin: 20px;
     padding: 15px;
     width: 28rem;
 }
@@ -82,7 +102,7 @@
     border: solid 2px transparent;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-    margin: 15px;
+    margin: 20px;
     padding: 15px;
     width: 20rem;
 }
