--- a/src/Components/mandarin/mandarin.css
+++ b/src/Components/mandarin/mandarin.css
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 20px;
     padding: 20px;
 }
