I was calling the main div in the css 'Drc' when I had called it 'drc', I'm a moron

--- a/src/Components/drc/drc.css
+++ b/src/Components/drc/drc.css
@@ -1,9 +1,4 @@
-.Drc{
-    display: flex;
-    justify-content: center;
-}
-
-.Drc h1{
+.drc h1{
     color: #101616;
     display: flex;
     justify-content: center;
