adding text to drc page, changing font color on drc page, added copyright to footer, added styles to footer, addin styles to mandarin page

--- a/src/Components/mandarin/mandarin.css
+++ b/src/Components/mandarin/mandarin.css
@@ -29,11 +29,11 @@
 }
 
 .content h3{
-    color: #2f4343;
+    color: #101616;
 }
 
 .content h4{
-    color: #2f4343;
+    color: #101616;
 }
 
 .content p{
@@ -52,13 +52,13 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     margin: 20px;
     padding: 15px;
-    width: 33.3vw;
+    width: 30rem;
 }
 
 .m-img-1{
     border-radius: 15px;
     margin: 20px;
-    width: 33.3vw;
+    width: 30rem;
 }
 
 .m-img-2{
