--- a/src/Components/drc/drc.css
+++ b/src/Components/drc/drc.css
@@ -29,11 +29,11 @@
 }
 
 .content h3{
-    color: #2f4343;
+    color: #101616;
 }
 
 .content h4{
-    color: #2f4343;
+    color: #101616;
 }
 
 .content p{
@@ -52,7 +52,7 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     margin: 20px;
     padding: 15px;
-    width: 33.3vw;
+    width: 30rem;
 }
 
 .d-img-1{
