--- a/src/Components/contact/contact.css
+++ b/src/Components/contact/contact.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 55vh;
+    min-height: 60vh;
     margin-top: 60px;
+    margin-bottom: 40px;
 }
 
 .contact-block{
