--- a/src/Components/resume/resume.css
+++ b/src/Components/resume/resume.css
@@ -1,10 +1,14 @@
+.Resume{
+    display: flex;
+    justify-content: center;
+}
 .Resume h1{
     color: #101616;
     display: flex;
     justify-content: center;
 }
 
-.dk-block{
+.job{
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
     border: solid 2px transparent;
@@ -12,26 +16,3 @@
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
 }
 
-.st-block{
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(5px);
-    border: solid 2px transparent;
-    border-radius: 15px;
-    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-}
-
-.ck-block{
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(5px);
-    border: solid 2px transparent;
-    border-radius: 15px;
-    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-}
-
-.drc-block{
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(5px);
-    border: solid 2px transparent;
-    border-radius: 15px;
-    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
-}
