--- a/src/Components/resume/resume.css
+++ b/src/Components/resume/resume.css
@@ -15,5 +15,8 @@
     border: solid 2px transparent;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
+    justify-content: center;
+    margin: 5px;
+    padding: 5px;
 }
 
