--- a/src/Components/resume/resume.css
+++ b/src/Components/resume/resume.css
@@ -16,6 +16,7 @@
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.3);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin: 5px;
     padding: 5px;
