--- a/src/Components/resume/resume.css
+++ b/src/Components/resume/resume.css
@@ -10,6 +10,7 @@
 }
 
 .job{
+    align-content: center;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
     border: solid 2px transparent;
