--- a/src/Components/resume/resume.css
+++ b/src/Components/resume/resume.css
@@ -11,6 +11,7 @@
 
 .job{
     align-content: center;
+    align-items: center;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
     border: solid 2px transparent;
@@ -19,7 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 5px;
+    margin: 15px;
     padding: 5px;
 }
 
